// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InstallToVPC> renders correctly when checkbox is not selected 1`] = `<Fragment />`;

exports[`<InstallToVPC> renders correctly when checkbox is not selected 2`] = `<Fragment />`;

exports[`<InstallToVPC> renders correctly when checkbox is selected 1`] = `
<Fragment>
  <GridItem>
    <Title
      headingLevel="h4"
      size="md"
    >
      Existing VPC
      <PopoverHint
        hint={
          <React.Fragment>
            Your VPC must have control plane and compute subnets. The control plane subnet is where you deploy your control plane machines to. The compute subnet is where you deploy your compute machines to.

            <ExternalLink
              href="https://docs.openshift.com/container-platform/4.10/installing/installing_gcp/installing-gcp-vpc.html"
            >
              Learn more about installing into an existing VPC
            </ExternalLink>
          </React.Fragment>
        }
        iconClassName="pf-u-ml-sm"
      />
    </Title>
    To install into an existing VPC you need to ensure that your VPC is configured with a control plane subnet and compute subnet.
  </GridItem>
  <GCPNetworkConfigSection />
</Fragment>
`;

exports[`<InstallToVPC> renders correctly when selected for multi AZ 1`] = `
<Fragment>
  <GridItem>
    <Title
      headingLevel="h4"
      size="md"
    >
      Existing VPC
      <PopoverHint
        hint={
          <React.Fragment>
            Your VPC must have public and private subnets. Public subnets are associated with appropriate Ingress rules. Private subnets need appropriate routes and tables.

            <ExternalLink
              href="https://docs.openshift.com/container-platform/4.10/installing/installing_aws/installing-aws-vpc.html"
            >
              Learn more about installing into an existing VPC
            </ExternalLink>
          </React.Fragment>
        }
        iconClassName="pf-u-ml-sm"
      />
    </Title>
    To install into an existing VPC you need to ensure that your VPC is configured with a public and a private subnet for each availability zone that you want the cluster installed into.

    <ExternalLink
      href="https://docs.openshift.com/container-platform/4.10/installing/installing_aws/installing-aws-vpc.html#installation-custom-aws-vpc-requirements_installing-aws-vpc"
    >
      Learn all about VPC
    </ExternalLink>
  </GridItem>
  <Field
    component={[Function]}
    helpText={
      <React.Fragment>
        To provide support, Red Hat Site Reliability Engineering (SRE) connects to the cluster using only AWS PrivateLink endpoints instead of public endpoints.  This option cannot be changed after a cluster is created.
      </React.Fragment>
    }
    label="Use a PrivateLink"
    name="use_privatelink"
  />
  <SubnetFields
    isMultiAz={true}
    selectedRegion="us-east-1"
  />
</Fragment>
`;

exports[`<InstallToVPC> renders correctly when selected for single AZ 1`] = `
<Fragment>
  <GridItem>
    <Title
      headingLevel="h4"
      size="md"
    >
      Existing VPC
      <PopoverHint
        hint={
          <React.Fragment>
            Your VPC must have public and private subnets. Public subnets are associated with appropriate Ingress rules. Private subnets need appropriate routes and tables.

            <ExternalLink
              href="https://docs.openshift.com/container-platform/4.10/installing/installing_aws/installing-aws-vpc.html"
            >
              Learn more about installing into an existing VPC
            </ExternalLink>
          </React.Fragment>
        }
        iconClassName="pf-u-ml-sm"
      />
    </Title>
    To install into an existing VPC you need to ensure that your VPC is configured with a public and a private subnet for each availability zone that you want the cluster installed into.

    <ExternalLink
      href="https://docs.openshift.com/container-platform/4.10/installing/installing_aws/installing-aws-vpc.html#installation-custom-aws-vpc-requirements_installing-aws-vpc"
    >
      Learn all about VPC
    </ExternalLink>
  </GridItem>
  <Field
    component={[Function]}
    helpText={
      <React.Fragment>
        To provide support, Red Hat Site Reliability Engineering (SRE) connects to the cluster using only AWS PrivateLink endpoints instead of public endpoints.  This option cannot be changed after a cluster is created.
      </React.Fragment>
    }
    label="Use a PrivateLink"
    name="use_privatelink"
  />
  <SubnetFields
    isMultiAz={false}
    selectedRegion="us-east-1"
  />
</Fragment>
`;
